Task instance Java/88